--- a/src/styles.css
+++ b/src/styles.css
@@ -71,10 +71,30 @@ body {
     margin-bottom: 10px;
     border-radius: 4px;
     color: #000;
-    cursor: grab;
+    
     transition: all 0.3s ease;
 }
 
 .card:hover{
     transform: scale(1.05);
+    cursor: grab;
+}
+
+.dragging {
+    opacity: 0;
+}
+
+.context-menu{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    padding: 5px 0;
+    border-radius: 4px;
+}
+
+.context-menu ul li{
+    list-style: none;
+    padding: 8px 15px;
+    cursor: pointer;
+    color: #333;
 }
